--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -504,20 +504,20 @@
       "RandomForestClassifier: \n",
       "\n",
       "Training a RandomForestClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0321 seconds\n",
-      "Made predictions in 0.0016 seconds.\n",
+      "Trained model in 0.0361 seconds\n",
+      "Made predictions in 0.0015 seconds.\n",
       "F1 score for training set: 0.9924.\n",
-      "Made predictions in 0.0017 seconds.\n",
+      "Made predictions in 0.0018 seconds.\n",
       "F1 score for test set: 0.7368.\n",
       "Training a RandomForestClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0259 seconds\n",
-      "Made predictions in 0.0023 seconds.\n",
+      "Trained model in 0.0300 seconds\n",
+      "Made predictions in 0.0043 seconds.\n",
       "F1 score for training set: 0.9885.\n",
-      "Made predictions in 0.0019 seconds.\n",
+      "Made predictions in 0.0017 seconds.\n",
       "F1 score for test set: 0.6822.\n",
       "Training a RandomForestClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0354 seconds\n",
-      "Made predictions in 0.0015 seconds.\n",
+      "Trained model in 0.0305 seconds\n",
+      "Made predictions in 0.0022 seconds.\n",
       "F1 score for training set: 0.9975.\n",
       "Made predictions in 0.0011 seconds.\n",
       "F1 score for test set: 0.7132.\n",
@@ -525,43 +525,43 @@
       "SVC: \n",
       "\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0018 seconds\n",
-      "Made predictions in 0.0013 seconds.\n",
+      "Trained model in 0.0012 seconds\n",
+      "Made predictions in 0.0008 seconds.\n",
       "F1 score for training set: 0.8354.\n",
-      "Made predictions in 0.0013 seconds.\n",
+      "Made predictions in 0.0009 seconds.\n",
       "F1 score for test set: 0.8025.\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0050 seconds\n",
-      "Made predictions in 0.0044 seconds.\n",
+      "Trained model in 0.0040 seconds\n",
+      "Made predictions in 0.0037 seconds.\n",
       "F1 score for training set: 0.8431.\n",
-      "Made predictions in 0.0020 seconds.\n",
+      "Made predictions in 0.0025 seconds.\n",
       "F1 score for test set: 0.8105.\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0094 seconds\n",
-      "Made predictions in 0.0097 seconds.\n",
+      "Trained model in 0.0099 seconds\n",
+      "Made predictions in 0.0062 seconds.\n",
       "F1 score for training set: 0.8664.\n",
-      "Made predictions in 0.0028 seconds.\n",
+      "Made predictions in 0.0018 seconds.\n",
       "F1 score for test set: 0.8052.\n",
       "\n",
       "KNeighborsClassifier: \n",
       "\n",
       "Training a KNeighborsClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0007 seconds\n",
+      "Trained model in 0.0008 seconds\n",
       "Made predictions in 0.0021 seconds.\n",
       "F1 score for training set: 0.8252.\n",
-      "Made predictions in 0.0021 seconds.\n",
+      "Made predictions in 0.0020 seconds.\n",
       "F1 score for test set: 0.7586.\n",
       "Training a KNeighborsClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0011 seconds\n",
-      "Made predictions in 0.0045 seconds.\n",
+      "Trained model in 0.0012 seconds\n",
+      "Made predictions in 0.0087 seconds.\n",
       "F1 score for training set: 0.8097.\n",
-      "Made predictions in 0.0025 seconds.\n",
+      "Made predictions in 0.0026 seconds.\n",
       "F1 score for test set: 0.7857.\n",
       "Training a KNeighborsClassifier using a training set size of 300. . .\n",
       "Trained model in 0.0013 seconds\n",
-      "Made predictions in 0.0092 seconds.\n",
+      "Made predictions in 0.0073 seconds.\n",
       "F1 score for training set: 0.8539.\n",
-      "Made predictions in 0.0039 seconds.\n",
+      "Made predictions in 0.0076 seconds.\n",
       "F1 score for test set: 0.8138.\n"
      ]
     }
@@ -618,25 +618,25 @@
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               | 0.0310                  | 0.0029                 | 0.9844           | 0.7153          |\n",
-    "| 200               | 0.0285                  | 0.0018                 | 0.9964           | 0.7857          |\n",
-    "| 300               | 0.0304                  | 0.0053                 | 0.9951           | 0.8092          |\n",
+    "| 100               | 0.0361                  | 0.0018                 | 0.9924           | 0.7368          |\n",
+    "| 200               | 0.0300                  | 0.0017                 | 0.9885           | 0.6822          |\n",
+    "| 300               | 0.0305                  | 0.0011                 | 0.9975           | 0.7132          |\n",
     "\n",
     "** Classifer 2 - SVC**  \n",
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               | 0.0017                  | 0.0009                 | 0.8777           | 0.7746          |\n",
-    "| 200               | 0.0032                  | 0.0024                 | 0.8679           | 0.7815          |\n",
-    "| 300               | 0.0099                  | 0.0018                 | 0.8761           | 0.7838          |\n",
+    "| 100               | 0.0012                  | 0.0009                 | 0.8354           | 0.8025          |\n",
+    "| 200               | 0.0040                  | 0.0025                 | 0.8431           | 0.8105          |\n",
+    "| 300               | 0.0099                  | 0.0018                 | 0.8664           | 0.8052          |\n",
     "\n",
     "** Classifer 3 - kNN**  \n",
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               | 0.0008                  | 0.0014                 | 0.8060           | 0.7246          |\n",
-    "| 200               | 0.0006                  | 0.0029                 | 0.8800           | 0.7692          |\n",
-    "| 300               | 0.0019                  | 0.0040                 | 0.8809           | 0.7801          |"
+    "| 100               | 0.0008                  | 0.0020                 | 0.8252           | 0.7586          |\n",
+    "| 200               | 0.0012                  | 0.0026                 | 0.8097           | 0.7857          |\n",
+    "| 300               | 0.0013                  | 0.0076                 | 0.8539           | 0.8138          |"
    ]
   },
   {
@@ -661,7 +661,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "I've choosen the Random Forest model. Based on my previous experiements, the RF model gave the best results, but note, it also performed the worst in terms of time taken to make predictions. However, given its advantages in being easy to implement, tune and scale to accomdate large datasets, and the fact that its slower performance was not grossly worse in comparison, I believe this is the best model to use."
+    "I've choosen the Random Forest model. Based on my previous experiements, although the RF model gave the lowest score, it also performed the best in terms of time taken to make predictions. The most accurate model, kNN, has a computational cost 7 times that of Random Forest. And with computational cost being a priority to the board, along with RF's advantages in being easy to implement, tune and scale to accomdate large datasets, I believe RF is the best model to use."
    ]
   },
   {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -722,7 +722,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Create the parameters list you wish to tune\n",
-    "parameters = {'n_estimators': range(5,20), 'max_features': ['log2', 'sqrt']}\n",
+    "parameters = {'n_estimators': range(8,15), 'max_features': ['log2', 'sqrt', 'auto']}\n",
     "\n",
     "# Initialize the classifier\n",
     "clf = RandomForestClassifier(random_state=42)\n",
