--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
     "    - Computational performance is good with a limited number of dimensions/features.\n",
     "    - If performance isn't an issue, kNN works better as it gains more data, i.e. large datasets\n",
     "- *Weaknesses:* \n",
-    "    - kNN has a performance of O(n^2) which means it can easily fall victim from the curse of dimensionality. \n",
+    "    - kNN has a performance directly tied to number of features, which means it can easily fall victim from the curse of dimensionality. \n",
     "    - kNN treats all attributes with the same importance, i.e. individual attributes/features are each given the same weight\n",
     "    - Tends to be slow during predictions as it doesn't learn from training but references training data during testing to predict outcome\n",
     "- *Good candidate:* \n",
@@ -661,7 +661,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "I've choosen the Random Forest model. Based on my previous experiements, although the RF model gave the lowest score, it also performed the best in terms of time taken to make predictions. The most accurate model, kNN, has a computational cost 7 times that of Random Forest. And with computational cost being a priority to the board, along with RF's advantages in being easy to implement, tune and scale to accomdate large datasets, I believe RF is the best model to use."
+    "I've choosen the Random Forest model. Based on my previous experiements, although the RF model gave the lowest score, it also performed the best in terms of time taken to make predictions. The most accurate model, kNN, has a computational cost up to 7 times that of Random Forest. And with computational cost being a priority to the board, along with RF's advantages in being easy to implement, tune and scale to accomdate large datasets, I believe RF is the best model to use."
    ]
   },
   {
@@ -678,7 +678,11 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "The random forest model is the averaged result of the outcome from multiple decision trees. A decision tree, asks the data multiple yes/no, true/false questions splitting up and breaking down the data until it can determine what the data is, i.e. until it can make a prediction. Hence, in the random forest model, we make multiple predictions and then use the average of those predictions as our final answer."
+    "The random forest model uses the averaged result of multiple decision trees. \n",
+    "\n",
+    "A decision tree, asks yes/no questions of the data in an effort to categorize each student in pass or fail buckets. Using previous student data as a learning tool, the decision tree determines the most important questions to ask which lead to students passing or failing. When presented with new data, the decision tree uses these learned questions to categorize the new students. For example, does a student have internet access? The answer, yes or no, will split students into two categories where another question will be asked, perhaps, is the student over 16yrs old? This process continues until the decision tree can put each student into a pass or fail bucket, i.e until it can make a prediction.\n",
+    "\n",
+    "In the random forest model, multiple decision trees make predictions of students passing or failing, and the average of those predictions become our final answer."
    ]
   },
   {
@@ -699,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -708,10 +712,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0013 seconds.\n",
-      "Tuned model has a training F1 score of 0.9950.\n",
-      "Made predictions in 0.0009 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7746.\n"
+      "{'max_features': 'sqrt', 'n_estimators': 13, 'criterion': 'entropy'}\n",
+      "---\n",
+      "Made predictions in 0.0014 seconds.\n",
+      "Tuned model has a training F1 score of 0.9877.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "Tuned model has a testing F1 score of 0.8000.\n"
      ]
     }
    ],
@@ -722,7 +728,9 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Create the parameters list you wish to tune\n",
-    "parameters = {'n_estimators': range(8,15), 'max_features': ['log2', 'sqrt', 'auto']}\n",
+    "parameters = {'n_estimators': range(5,15), \n",
+    "              'max_features': ['log2', 'sqrt'],\n",
+    "              'criterion':['gini','entropy']}\n",
     "\n",
     "# Initialize the classifier\n",
     "clf = RandomForestClassifier(random_state=42)\n",
@@ -739,6 +747,9 @@
     "# Get the estimator\n",
     "clf = grid_obj.best_estimator_\n",
     "\n",
+    "# Review best parameters\n",
+    "print grid_obj.best_params_\n",
+    "print \"---\"\n",
     "# Report the final F1 score for training and testing after parameter tuning\n",
     "print \"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf, X_train, y_train))\n",
     "print \"Tuned model has a testing F1 score of {:.4f}.\".format(predict_labels(clf, X_test, y_test))"
@@ -758,14 +769,14 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Final F1 score: **Training is 0.9831** and **Testing is 0.8271** \n",
+    "Final F1 score: **Training is 0.9877** and **Testing is 0.8000** \n",
     "\n",
-    "- Made predictions in 0.0012 seconds.\n",
-    "- Tuned model has a training F1 score of 0.9831.\n",
-    "- Made predictions in 0.0013 seconds.\n",
-    "- Tuned model has a testing F1 score of 0.8271.\n",
+    "- Made predictions in 0.0014 seconds.\n",
+    "- Tuned model has a training F1 score of 0.9877.\n",
+    "- Made predictions in 0.0010 seconds.\n",
+    "- Tuned model has a testing F1 score of 0.8000\n",
     "\n",
-    "The tuned and untuned models are separated by < 0.02. The nature of the random forest model means there are limited areas of tuning, in most cases this is advantageous. Here I've tuned two main areas, estimators (number of trees to use) and max features (max number of features each trees can use). A disadvantage of limited areas for tuning means that a F1 score of 0.8271 is probably close to the best value achievable given the dataset."
+    "The tuned and untuned models are separated by approx. 0.09 and with no increase in training or testing time. The nature of the random forest model means there are limited areas of tuning, in most cases this is advantageous. Here I've tuned three main areas, estimators (number of trees to use), max features (max number of features each trees can use) and criterion (a measure of quality of the split)."
    ]
   },
   {
